6681646: Relocking of a scalar replaced object during deoptimization is broken

Relocking of a thread-local object during deoptimization is broken

Reviewed-by: kbr, jrose, never